@@ -1,3 +1,10 @@
+2021-06-21  Philippe Normand  <pnormand@igalia.com>
+
+        Unreviewed build fix after r279062
+
+        * wtf/Span.h:
+        (std::is_convertible_v<std::remove_pointer_t<decltype):
+
 2021-06-20  Sam Weinig  <weinig@apple.com>
 
         Replace Span implementation with one from libc++, which is more spec complient
